--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,15 +53,15 @@ a, a:hover {
 }
 
 .dsmovie-contact-container img {
-    margin: 10px;
+    margin: 10px; 
 }
 
 #dsmovie-card-list {
-    padding: 40px;
+    padding: 40px; 
 }
 
 .dsmovie-card {
-    width: 360px;
+    width: 89% /*100*/
     
 }
 
@@ -73,14 +73,19 @@ a, a:hover {
 
 .dsmovie-card-description {
     background-color: var(--white);
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     border-radius: 0 0 8px 8px;
+    min-height: 150px;
 }
 .dsmovie-card-description h3 {
     margin-bottom: 25px;
+    font-size: 14px;
+    margin-bottom: 25px;
+    text-align: center;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
