--- a/CSS/style.css
+++ b/CSS/style.css
@@ -100,3 +100,9 @@ a, a:hover {
     justify-content: center;
     border-radius: 4px;
 }
+
+.dsmovie-form-container {
+    padding: 40px 0; /*40px 0*/
+    max-width: 480px; /*480px*/
+    
+}
