--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,7 @@
     --white: #fff;
     --text-gray: #4a4a4a;
     --text-light-gray: #aaa;
+    --star-yellow: #ffbb3a;
 }
 
 * {
@@ -80,13 +81,32 @@ a, a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
 }
 .dsmovie-card-description h3 {
     margin-bottom: 25px;
     font-size: 14px;
     margin-bottom: 25px;
     text-align: center;
+}
+
+.dsmovie-card-description-bottom h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+
+.dsmovie-card-description-bottom img {
+    width: 22px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-bottom p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
 }
 
 .dsmovie-btn, .dsmovie-btn:hover {
@@ -104,8 +124,8 @@ a, a:hover {
 }
 
 .dsmovie-form-container {
-    padding: 40px 0; /*40px 0*/
-    max-width: 480px; /*480px*/
+    padding: 40px 0; 
+    max-width: 480px;
     
 }
 
@@ -135,6 +155,15 @@ a, a:hover {
     color: var(--text-light-gray);
 }
 
+
+.dsmovie-form-group label { 
+    font-size: 12px;
+    color: var(--text-light-gray);
+    display: flex;
+
+
+}
+
 .dsmovie-form-btn-container {
     height: 100px;
     display: flex;
@@ -142,3 +171,4 @@ a, a:hover {
     align-items: center;
     justify-content: space-between;
 }
+
