--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,11 +59,11 @@ a, a:hover {
 }
 
 #dsmovie-card-list {
-    padding: 40px; 
+    padding: 40px 10px; 
 }
 
 .dsmovie-card {
-    width: 89% /*100*/
+    width: 84%
     
 }
 
@@ -81,12 +81,12 @@ a, a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    height: 220px;
+    height: 190px;
 }
 .dsmovie-card-description h3 {
     margin-bottom: 25px;
     font-size: 14px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     text-align: center;
 }
 
