--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,7 @@
 h1, h2, h3, h4, h5, h6, {
     margin: 0;
 }
+
 html, body{
     background-color: var(--bg-gray);
 }
@@ -59,7 +60,7 @@ a, a:hover {
 }
 
 #dsmovie-card-list {
-    padding: 40px 10px; 
+    padding: 0 10px; 
 }
 
 .dsmovie-card {
@@ -172,3 +173,49 @@ a, a:hover {
     justify-content: space-between;
 }
 
+.dsmovie-pagination-container {
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box {
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dsmovie-pagination-box p {
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+    font-weight: 400;
+}
+
+.dsmovie-pagination-box button {
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dsmovie-pagination-box button img {
+    filter: brightness(0) saturate(100%) invert(25%) sepia(30%) saturate(6781%) hue-rotate(240deg) brightness(79%) contrast(89%);
+}
+
+.dsmovie-pagination-box button:disabled {
+    border: 1px solid var(--text-light-gray)
+}
+
+.dsmovie-pagination-box button:disabled img {
+    filter: unset;
+}
+
+.dsmovie-flip-horizontal {
+    transform: rotate(180deg);
+}
